--- a/estilos.css
+++ b/estilos.css
@@ -206,6 +206,27 @@ nav .ulmenu .limenu{
 /* MAIN */
 /* ------------------------- */
 
+/* ------------------------- */
+/* BOTÓN BACK TO TOP */
+/* ------------------------- */
+
+#topBtn{
+	position:fixed;
+	bottom:40px;
+	right:40px;
+	font-size: 22px;
+	width:50px;
+	height:50px;
+	border-radius: 25px;
+	background:#3fea50;
+	color:#fff;
+	border:none;
+	cursor:pointer;
+	display:none;
+}
+
+
+
 .contenedor{
 	
 	margin-top: 80px;
@@ -510,9 +531,7 @@ nav .ulmenu .limenu{
 
 .contenedor-img {
 	position: relative;
-	width:80%;
-	height:auto;
-	object-fit: contain;
+	
 }
 
 .overlay #btn-cerrar-popup {
@@ -529,6 +548,17 @@ nav .ulmenu .limenu{
 -moz-border-radius: 200px 200px 200px 200px;
 -webkit-border-radius: 200px 200px 200px 200px;
 border: 0px solid #000000;
+}
+
+@media screen and (max-width: 1024px) {
+	
+
+	.contenedor-img {
+		position: relative;
+		width:80%;
+		height:auto;
+		object-fit: contain;
+	}
 }
 
 /* ------------------------- */
