--- a/estilos.css
+++ b/estilos.css
@@ -218,12 +218,15 @@ nav .ulmenu .limenu{
 	width:50px;
 	height:50px;
 	border-radius: 25px;
-	background:#3fea50;
+	background:#3FEA50;
 	color:#fff;
 	border:none;
 	cursor:pointer;
 	display:none;
 	z-index:2000;
+	-webkit-box-shadow: 3px 3px 25px 0px rgba(0,0,0,0.76);
+-moz-box-shadow: 3px 3px 25px 0px rgba(0,0,0,0.76);
+box-shadow: 3px 3px 25px 0px rgba(0,0,0,0.76);
 }
 
 
