--- a/css/repuestosstyle.css
+++ b/css/repuestosstyle.css
@@ -2,6 +2,7 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	list-style:none;
 }
 
 body {
@@ -26,7 +27,7 @@ a {
 header{
     transition: all .5s ease;
     width:100%;
-    z-index:300;
+    z-index:9999;
     position: fixed;
     top:0;
     
@@ -43,7 +44,7 @@ header{
     
 }
 nav{
-    height:100px;
+    height:70px;
     width:100%;
     display: flex;
     flex-wrap: wrap;
@@ -53,6 +54,12 @@ nav{
     display:inline-block;
     margin-top: 1em;
     margin-left: 10%;
+    width:200px;
+    height:auto;
+}
+.cajalogo img{
+    max-width:100%;
+    object-fit: contain;
 }
 
 nav #icon{
@@ -70,7 +77,7 @@ nav #icon{
     float:right;
     margin-right: 40px;
     display: none;
-    margin-top:1.5em;
+    margin-top:1em;
     
 }
 .try{
@@ -86,7 +93,6 @@ nav #icon{
 }
 .hamburguesa{
     height: 15%;
-    background: black;
     width: 100%;
     
     
@@ -116,12 +122,12 @@ nav #icon{
 .cruz:before{
     transition: .5s;
     top:0px;
-    transform:rotateZ(90deg)
+    transform:rotateZ(90deg);
 }
 .cruz:after{
     transition: .5s;
     top:0px;
-    transform:rotateZ(0deg)
+    transform:rotateZ(0deg);
 }
 nav .ulmenu{
     float: right;
@@ -130,16 +136,41 @@ nav .ulmenu{
 }
 nav .ulmenu .limenu{
     display: inline-block;
-    margin-top: 40px;
+    margin-top: 30px;
     margin-right: 8px;
     margin-left: 8px;
     
 }
+nav .ulmenu ul{
+    display:none;
+}
+nav .ulmenu .limenu:hover ul{
+    display:block;
+    position:absolute;
+    margin-top: 20px;
+ 
+}
+nav .ulmenu .limenu ul a{
+    display:block;
+    padding: 15px 20px;
+    color:#fff;
+    text-decoration: none;
+    background: #222222;
+}
+.down{
+    display:none;
+    color:#3FEA50;
+    text-decoration: none;
+    font-size:25px;   
+}
+
+nav .ulmenu .limenu ul a:hover{
+    background:#3FEA50;
+}
 .limenu .amenu{
     color:#fff;
     font-size: 1em;
-    text-transform: uppercase;
-    padding: 7px 10px;
+    padding: 25px 10px;
     
 }
 .amenu.active,.amenu:hover{
@@ -164,11 +195,16 @@ nav .ulmenu .limenu{
          position:fixed;
          width: 100%;
          height: 100vh;
-         top:100px;
+         top:70px;
          left:-100%;
          text-align: center;
-         transition: all .5s;
-         background: rgba(0, 0, 0, 0.9);
+		 transition: all .5s;
+		 z-index:2000;
+          /* fallback for old browsers */
+          background: -webkit-linear-gradient(to right, #3fea50, #45f48e);
+          /* Chrome 10-25, Safari 5.1-6 */
+          background: linear-gradient(to right, #3fea50, #45f48e);
+          /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
          
      }
      .ulmenu .limenu{
@@ -180,17 +216,20 @@ nav .ulmenu .limenu{
          border-style: solid;
         border-width: 0 0 1px ;
         border-color: #fff;
-         
-         
 
      }
      .limenu .amenu{
          display: block;
-         padding: 2em 0;
+         padding: 1.5em 0;
+         text-align: left;
+         padding-left: 30px;
      }
      nav .ulmenu.show{
          left:0%;
 
+     }
+     .cajalogo{
+         width:130px;
      }
      .cajaicono{
          display: flex;
@@ -198,9 +237,49 @@ nav .ulmenu .limenu{
          align-items: center;
          justify-content: center;
      }
+     nav .ulmenu .limenu:hover ul{
+        display:none;
+        position: static;
+        margin-top: 0;
+    }
+    nav .ulmenu .limenu ul a{
+        margin:auto!important;
+        border-style: solid;
+       border-width: 0 0 1px ;
+       border-color: #fff;
+       padding:1.2em 0;
+       text-align: left;
+         padding-left:60px;
+       
+    }
+    .cajadown{
+        display:flex;
+        width:40%;
+        text-align: center;
+        box-sizing: border-box;
+        padding:15px;
+        cursor: pointer;
+        
+    } 
+    .down{
+        display:block;
+        color: #fff;
+        text-align: center;
+        width:100%;
+    }
+    .servmenu{
+        display:flex;
+        flex-direction: row;
+    }
+    .servmenu a{
+        display:flex;
+        width:60%;
+    }
+    
     
     
 }
+
 
 /* ------------------------- */
 /* MAIN */
@@ -229,7 +308,7 @@ nav .ulmenu .limenu{
 box-shadow: 3px 3px 25px 0px rgba(0,0,0,0.76);
 }
 
-
+/*==================MAIN=============================================*/
 
 .contenedor{
 	margin-top: 80px;
@@ -237,7 +316,7 @@ box-shadow: 3px 3px 25px 0px rgba(0,0,0,0.76);
 .cajafotoprin{
 	width:100%;
 	height:50vh;
-	background-image: url("./img/bannerserviciosindex.png");
+	background-image: url("/imgproductos/bannerserviciosindex.png");
 	background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
