--- a/css/hs.css
+++ b/css/hs.css
@@ -359,7 +359,8 @@ box-shadow: 3px 3px 25px 0px rgba(0,0,0,0.76);
 .cajafotoprin{
 	width:100%;
 	height:50vh;
-	background-image: url("/imagenes/bannerserviciosindex.png");
+    background-image: url("/imagenes/bannerserviciosindex.png");
+    background:#222222;
 	background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
